<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/tv_graph_dump_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView11"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/tvRate"
                android:layout_marginTop="50dp"/>
        <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chDump"
                android:layout_width="match_parent"
                android:layout_height="300dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView11"
        >
        </com.github.mikephil.charting.charts.LineChart>
        <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chBought"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
        >
        </com.github.mikephil.charting.charts.LineChart>
        <TextView
                android:text="@string/tv_graph_bought_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/chDump" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvRate"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="80sp"
                app:layout_constraintTop_toBottomOf="@+id/textView15" android:layout_marginTop="50dp" tools:text="50"
                app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/tv_graph_rate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/tv_graph_rate_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvRate"
                app:layout_constraintStart_toEndOf="@+id/tvRate" android:textSize="40sp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/chBought" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="50dp" android:text="@string/tv_empty"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>