<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="90dp">

    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/ivIcon"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" tools:srcCompat="@drawable/ic_0"
            app:srcCompat="@drawable/ic_0"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline" app:layout_constraintGuide_begin="90dp"
                                                android:orientation="vertical"/>
    <TextView
            android:text="@string/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvItemName" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tvItemDeadLineLabel"
            app:layout_constraintVertical_chainStyle="spread_inside" android:textSize="18sp"/>
    <TextView
            android:text="@string/tv_item_deadline_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvItemDeadLineLabel" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/tvItemName"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp"/>
    <TextView
            android:text="@string/tv_item_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvItemDeadLine"
            app:layout_constraintStart_toEndOf="@+id/tvItemDeadLineLabel"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvItemDeadLineLabel" android:textSize="18sp"/>
    <TextView
            android:text="id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPosition"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="1sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>